# fastapi-celery-sqs-elasticcache

./: .env.local  .env.worker  .gitignore  Makefile  docker-compose-localstack.yml  docker-compose.local.yml  docker-compose.worker.yml  docker-compose.yml  pyproject.toml  requirements.txt
scripts/localstack/: init.sh
scripts/worker/: start-worker.sh
src/: Dockerfile  config.py  main.py
src/api/: __init__.py  tasks.py
src/app/: celery.py
src/tasks/: __init__.py  add.py
